Add map marker management features, refactor azimuth calculation API, and enhance UI components

--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="permissions_dont_allow">Don\'t Allow</string>
     <string name="allow">Allow</string>
     <string name="d">d</string>
+    <string name="hint">Empty</string>
 </resources>
 
